--- a/style1.css
+++ b/style1.css
@@ -542,6 +542,7 @@ font-size: 64px;
   html {
     font-size: 40%;
   }
+
   nav{
     padding: 1.5rem 1rem;
   }
@@ -549,11 +550,13 @@ font-size: 64px;
   h2 {
     font-size: 3rem;
   }
-
+  h1 {
+    font-size: 2rem;
+}
   nav h1 {
     font-size: 3rem;
   }
-  
+
   nav ul {
     position: fixed;
     background-color: var(--main-red);
