--- a/style1.css
+++ b/style1.css
@@ -478,7 +478,7 @@ font-size: 64px;
     margin-bottom: var(--bottom-margin);
     list-style-type: circle;
     margin: 10px;
-
+    font-size: 1.6rem;
   }
   
   .project-card {
@@ -545,6 +545,11 @@ font-size: 64px;
 /* 1200px / 16px = 75em */
 @media screen and (max-width: 50em) {
 
+  #about{
+    /* centre */
+    margin: auto;
+    width: 70%;
+  }
 
   .image {
     width:50%;
@@ -557,18 +562,20 @@ font-size: 64px;
     padding: 2rem;
   }
 
-  nav{
+  .nav{
+    justify-content: space-between;
     padding: 1.5rem 1rem;
   }
 
   h2 {
     font-size: 1.8em;
   }
-  h1 {
-        font-size: 2rem;
-  }
+ 
+
   nav h1 {
-    font-size: 2rem;
+    text-align: left;
+    font-size: 3rem;
+    justify-self: left;
   } 
 
   nav ul {
@@ -576,8 +583,8 @@ font-size: 64px;
     background-color: var(--main-red);
     flex-direction: column;
     top: 86px;
-    left: 10%;
-    width: 80%;
+    left: 0%;
+    width: 100%;
     text-align: center;
     transform: translateX(120%);
     transition: transform 0.5s ease-in;
